--- a/About me/contact.html
+++ b/About me/contact.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="css/styling.css">
 </head>
 <body>
+    <div class="wrap">
     <nav>
         <a href="index.html">≤Back</a>
     </nav>
-</body>
-<main>
+
+    <main>
     <p>My phone number: +358 40 726 6713</p>
     <p>My email: arskis94@hotmail.com</p>
-</main>
-<footer>&copy; Copyright - All rights reserved.</footer>
+    </main>
+
+    <footer>&copy; Copyright - All rights reserved.</footer>
+    </div>
+</body>
+
 </html>
