--- a/About me/index.html
+++ b/About me/index.html
@@ -14,6 +14,7 @@
             <a href="about.html">About</a>
             &verbar;
             <a href="contact.html"> Contact</a>
+            <a href="../blog/index.html">My Blog</a>
         </nav>
     </div>
 
