added some grid
still need more work to manage all the space

--- a/About me/index.html
+++ b/About me/index.html
@@ -11,9 +11,12 @@
     <div class="wrap">
     <div>
         <nav>
+            <span style="text-decoration: underline">Home</span>
+            &verbar;
             <a href="about.html">About</a>
             &verbar;
             <a href="contact.html"> Contact</a>
+            &verbar;
             <a href="../blog/index.html">My Blog</a>
         </nav>
     </div>
