added new improved grid version
alot of utilization with grid

--- a/About me/about.html
+++ b/About me/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,37 @@
     <title>About</title>
     <link rel="stylesheet" href="css/styling.css">
 </head>
+
 <body>
-    <div class="wrap">
-        <nav>
-            <a href="index.html">≤Back</a>
-        </nav>
+    <div class="site">
+        <div class="contentcontainer">
+            <header class="title">
+                <nav class="navigation">
+                    <a class="nav" href="index.html">
+                        <span">≤Back</span>
+                    </a>
+                </nav>
+
+                <h1>Me</h1>
+            </header>
 
 
-    <main>
-        <ul>
-            <li>asd</li>
-            <li>asdd</li>
-            <li>lolo</li>
-         <li>hehehe</li>
-        </ul>
-    </main>
+            <main class="contentcontainer">
+                <h3>The stuff</h3>
+                <section class="content">
+                    <ul>
+                        <li>asd</li>
+                        <li>asdd</li>
+                        <li>lolo</li>
+                        <li>hehehe</li>
+                    </ul>
+                </section>
+            </main>
+        </div>
 
-    <footer>&copy; Copyright - All rights reserved.</footer>
+        <footer class="footer">&copy; Copyright - All rights reserved.
+        </footer>
     </div>
 </body>
+
 </html>
