--- a/About me/contact.html
+++ b/About me/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,29 @@
     <title>Contact</title>
     <link rel="stylesheet" href="css/styling.css">
 </head>
+
 <body>
-    <div class="wrap">
-    <nav>
-        <a href="index.html">≤Back</a>
-    </nav>
+    <div class="site">
+        <div class="contentcontainer">
+            <header class="title">
+                <nav class="navigation">
+                    <a class="nav" href="index.html">
+                        <span>≤Back</span>
+                    </a>
+                </nav>
+            </header>
 
-    <main>
-    <p>My phone number: +358 40 726 6713</p>
-    <p>My email: arskis94@hotmail.com</p>
-    </main>
 
-    <footer>&copy; Copyright - All rights reserved.</footer>
+            <main class="contentcontainer">
+                <h3>How to contact me</h3>
+                <section class="content">
+                    <p>My phone number: +358 40 726 6713</p>
+                    <p>My email: arskis94@hotmail.com</p>
+                </section>
+            </main>
+        </div>
+        <footer class="footer">&copy; Copyright - All rights reserved.
+        </footer>
     </div>
 </body>
 
