added grid to about me
added grid to about me and fixed all the issues on blog

--- a/About me/about.html
+++ b/About me/about.html
@@ -15,17 +15,27 @@
             <header class="title">
                 <nav class="navigation">
                     <a class="nav" href="index.html">
-                        <span">≤Back</span>
+                        <span>Home</span>
                     </a>
+                    &verbar;
+                    <span style="text-decoration: underline;">About</span>
+                    &verbar;
+                    <a class="nav" href="index.html">
+                    </a>
+                    <a class="nav" href="contact.html">
+                        <span>Contact</span>
+                    </a>
+                    <a class="nav" href="../blog/index.html">
+                    <span>My Blog</span></a>
                 </nav>
 
                 <h1>Me</h1>
             </header>
 
 
-            <main class="contentcontainer">
+            <main class="content">
                 <h3>The stuff</h3>
-                <section class="content">
+                <section>
                     <ul>
                         <li>asd</li>
                         <li>asdd</li>
