--- a/About me/contact.html
+++ b/About me/contact.html
@@ -15,17 +15,26 @@
             <header class="title">
                 <nav class="navigation">
                     <a class="nav" href="index.html">
-                        <span>≤Back</span>
+                        <span>Home</span>
                     </a>
+                    &verbar;
+                    <a class="nav" href="about.html">
+                        <span>About</span>
+                    </a>
+                    &verbar;
+                    <span style="text-decoration: underline;">Contact</span>
+                    <a class="nav" href="../blog/index.html">
+                    <span>My Blog</span></a>
                 </nav>
+
+                <h1>Contacts</h1>
             </header>
 
-
-            <main class="contentcontainer">
-                <h3>How to contact me</h3>
+            <main class="content">
+                <h3>The ways of contacting me</h3>
                 <section class="content">
-                    <p>My phone number: +358 40 726 6713</p>
-                    <p>My email: arskis94@hotmail.com</p>
+                    <p>My phone number: +358 22 222 2222</p>
+                    <p>My email: email@me.me</p>
                 </section>
             </main>
         </div>
