--- a/About me/index.html
+++ b/About me/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="site">
-        <div class="titlecontainer">
+        <div class="contentcontainer">
             <header class="title">
                 <nav class="navigation">
                     <span style="text-decoration: underline">Home</span>
@@ -34,12 +34,12 @@
                 <img src="img/icat.jpeg" alt="a picture of a cat">
             </header>
 
-            <div class="contentcontainer">
+            <div class="content">
                 <main class="contentwrapper">
                     <h2>About me Aarne Logvinenko</h2>
                     <section class="content">
                         <p>Yo wadap</p>
-                        <p>Habla espanjol?</p>
+                        <p>Habla espanol?</p>
                     </section>
                 </main>
             </div>
