--- a/tip calc/index.html
+++ b/tip calc/index.html
@@ -19,13 +19,12 @@
             <div class="total">
                 <form class="theBill">
                     <label>Total bill:</label>
-                    <input type="text" placeholder="Enter your bill..." class="totalinput">
-                    <button type="submit" class="calculatebutton">Calculate</button>
+                    <input type="number" placeholder="Enter your bill..." class="totalinput" required>
                 </form>
                 <label class="tiplabel">Tip:</label>
                 <input type="range" value="0" min="0" max="100" class="tipinput">
                 <br />
-                <label>Split (number of people)</label>
+                <label class="splitlabel">Split (# of people):</label>
                 <input type="range" value="1" min="1" max="20" class="splitinput">
                 <hr />
                 <label>New Bill (per person):</label>
