--- a/tip calc/index.html
+++ b/tip calc/index.html
@@ -21,11 +21,14 @@
                     <label>Total bill:</label>
                     <input type="number" placeholder="Enter your bill..." class="totalinput" required>
                 </form>
-                <label class="tiplabel">Tip:</label>
-                <input type="range" value="0" min="0" max="100" class="tipinput">
-                <br />
-                <label class="splitlabel">Split (# of people):</label>
-                <input type="range" value="1" min="1" max="20" class="splitinput">
+                <div class="labbel">
+                    <label class="tiplabel labbel">Tip:</label>
+                    <input type="range" value="0" min="0" max="100" class="tipinput">
+                </div>
+                <div class="labbel">
+                    <label class="splitlabel">Split (# of people):</label>
+                    <input type="range" value="1" min="1" max="20" class="splitinput">
+                </div>
                 <hr />
                 <label>New Bill (per person):</label>
                 <span class="totalamount">Total €</span>
